+ events from interval handler
