# pkg/openapi/jcalendar/type.go
@@ -53,6 +53,7 @@ type InputEvent struct {
 	IsPrivate    *bool   `json:"IsPrivate,omitempty"`
 	IsRepeat     *bool   `json:"IsRepeat,omitempty"`
 	Participants *[]int  `json:"Participants,omitempty"`
+	ScheduleRule *string `json:"ScheduleRule,omitempty"`
 	Till         *string `json:"Till,omitempty"`
 }
 
@@ -77,14 +78,28 @@ type InviteUpdateRequest struct {
 
 // OutputEvent defines model for OutputEvent.
 type OutputEvent struct {
-	CreateAt  *string `json:"CreateAt,omitempty"`
-	CreatorID *int    `json:"CreatorID,omitempty"`
-	Details   *string `json:"Details,omitempty"`
-	From      *string `json:"From,omitempty"`
-	ID        *int    `json:"ID,omitempty"`
-	IsPrivate *bool   `json:"IsPrivate,omitempty"`
-	Till      *string `json:"Till,omitempty"`
-	UpdateAt  *string `json:"UpdateAt,omitempty"`
+	CreateAt     *string       `json:"CreateAt,omitempty"`
+	Creator      *OutputUser   `json:"Creator,omitempty"`
+	Details      *string       `json:"Details,omitempty"`
+	From         *string       `json:"From,omitempty"`
+	ID           *int          `json:"ID,omitempty"`
+	IsPrivate    *bool         `json:"IsPrivate,omitempty"`
+	IsRepeat     *bool         `json:"IsRepeat,omitempty"`
+	Participants *[]OutputUser `json:"Participants,omitempty"`
+	ScheduleRule *string       `json:"ScheduleRule,omitempty"`
+	Till         *string       `json:"Till,omitempty"`
+	UpdateAt     *string       `json:"UpdateAt,omitempty"`
+}
+
+// OutputUser defines model for OutputUser.
+type OutputUser struct {
+	CreateAt       *string `json:"CreateAt,omitempty"`
+	Email          *string `json:"Email,omitempty"`
+	FirstName      *string `json:"FirstName,omitempty"`
+	ID             *int    `json:"ID,omitempty"`
+	LastName       *string `json:"LastName,omitempty"`
+	TimeZoneOffset *int    `json:"TimeZoneOffset,omitempty"`
+	UpdateAt       *string `json:"UpdateAt,omitempty"`
 }
 
 // TokenPayload defines model for TokenPayload.
